--- a/themes/tuan_theme/views/shared/_footer.html.erb
+++ b/themes/tuan_theme/views/shared/_footer.html.erb
@@ -2,4 +2,5 @@
   <p>
     <%= t('.copyright').html_safe -%> <%= Time.now.year -%> <%= RefinerySetting.get(:site_name) %>
   </p>
+	<%=render :partial => '/shared/footer_contact' %>
 </div>
