--- a/themes/tuan_theme/views/layouts/application.html.erb
+++ b/themes/tuan_theme/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
                  :exclude_site_bar_javascript => false,
                  :exclude_jquery => false
                } %>
+		<%#add riding text on the top %>
+		<% if riding_text = RefinerySetting.find_or_set(:riding_text, "&nbsp;") -%>
+		 <div class="riding_text"><marquee behavior='alternate' direction='right' align='middle' border=0><%=riding_text%></marquee></div>
+		<%end -%>
+		
     <div id='page_container'>
       <div id='page'>
         <%= render :partial => "/shared/ie6check" if request.env['HTTP_USER_AGENT'] =~ /MSIE/ -%>
@@ -17,7 +22,16 @@
         </div>
         <div id='body' class='clearfix'>
 				  <% if home_page? -%>
-				    <div id='banner'><%=image_tag "/theme/images/banner#{((rand()*10).to_i)%3}.png" %></div>
+				    <!--slider -->
+							<div id="slider1">
+							<div class="viewport">
+								<ul class="overview">								
+									<li><img src="/theme/images/banner2.png" /></li>
+									<li><img src="/theme/images/banner1.png" /></li>
+									<li><img src="/theme/images/banner0.png" /></li>
+								</ul>
+							</div>
+						</div>
 					<%else -%>
 					  <div id='banner'><%=image_tag "/theme/images/banner#{((rand()*10).to_i)%3}.png" %></div>
 					<%end -%>
