--- a/themes/tuan_theme/views/shared/_footer_contact.html.erb
+++ b/themes/tuan_theme/views/shared/_footer_contact.html.erb
@@ -1,7 +1,6 @@
 <p>
-<br/> ÖØÇìÒæ¼ÒÕþ·þÎñÖÐÐÄ
-<br/>	ÖØÇìÊÐÐ¡Áú¿²Õý½Ö339ºÅ¸Û³Ç»¨Ô°A×ù17-1
-<br/> 023-65305533 ³Â¾­Àí
-<br/> 1448981318@qq.com
+	<br/>	é‡åº†å¸‚å°é¾™åŽæ­£è¡—339å·æ¸¯åŸŽèŠ±å›­Aåº§17-1
+	<br/> 023-65305533 é™ˆç»ç†
+	<br/> 1448981318@qq.com
+	<br/> <img src="/theme/images/provice.gif" width='40px'/>
 </p>
-
