--- a/themes/tuan_theme/views/shared/_menu.html.erb
+++ b/themes/tuan_theme/views/shared/_menu.html.erb
@@ -24,6 +24,10 @@
                        :apply_css => true #if you don't care about class='first' class='last' or class='selected' set apply_css to false for speed.
                      }
           -%>
+				  <!--add phone-->
+					<li>
+						<span class='menu_bar_unlink'>023-65305533</span>
+					</li>
         </ul>
       </nav>
   <%
