--- a/themes/tuan_theme/views/shared/_footer_contact.html.erb
+++ b/themes/tuan_theme/views/shared/_footer_contact.html.erb
@@ -1,6 +1,4 @@
 <p>
-	<br/>	重庆市小龙坎正街339号港城花园A座17-1
-	<br/> 023-65305533 陈经理
-	<br/> 1448981318@qq.com
+	<%= RefinerySetting.find_or_set(:a_company_contact, '公司联系方式').html_safe %>
 	<br/> <img src="/theme/images/provice.gif" width='40px'/>
 </p>
