--- a/themes/tuan_theme/views/shared/_qq.html.erb
+++ b/themes/tuan_theme/views/shared/_qq.html.erb
@@ -1,5 +1,5 @@
 <% 
- qqs = RefinerySetting.find_or_set(:qq, ',')
+ qqs = RefinerySetting.find_or_set(:a_qq, ',')
  qqs = qqs.split(',')
  str = "<TABLE cellSpacing=0 cellPadding=0 width=110 border=0><TBODY>"
  str += "<TR><TD width=110 vAlign=center background=http://www.zzsky.cn/effect/images/qqservice/kefu_middle.gif><IMG height=70 src=http://www.zzsky.cn/effect/images/qqservice/kefu_up.gif width=110></TD></TR>"
