--- a/themes/tuan_theme/views/pages/home.html.erb
+++ b/themes/tuan_theme/views/pages/home.html.erb
@@ -11,3 +11,9 @@
 		});
 	</script>	
 <% end -%>
+
+<!--marquee pic-->
+	<script type="text/javascript">
+		var obj = document.getElementById('marquee_div');
+		obj.innerHTML = "<marquee>" + obj.innerHTML + "</marquee>";
+	</script
