--- a/themes/tuan_theme/stylesheets/application.css
+++ b/themes/tuan_theme/stylesheets/application.css
@@ -147,7 +147,7 @@ body {
 	margin-left: auto;
 }
 .ROUND-BOX H2{
-	font-family: "ËÎÌå";
+	font-family: "å®‹ä½“";
 	font-size: 16px;
 	font-weight: bold;
 	margin: 4px;
@@ -199,6 +199,6 @@ body {
 	border-right-style: solid;
 	border-bottom-style: solid;
 	border-left-style: solid;
-	font-family: "ËÎÌå";
+	font-family: "å®‹ä½“";
 	font-size: 14px;
 }
