--- a/themes/tuan_theme/views/shared/_head.html.erb
+++ b/themes/tuan_theme/views/shared/_head.html.erb
@@ -9,7 +9,7 @@
   <%= stylesheet_link_tag "application", "formatting", :theme => theme %>
   <%= stylesheet_link_tag "theme" %>
   <%= stylesheet_link_tag "home", :theme => theme if home_page? %>
-  <%= "<!--[if IE 7]>#{stylesheet_link_tag 'ie7'}<![endif]-->".html_safe if request.env['HTTP_USER_AGENT'] =~ /MSIE/ -%>
+  <%= "<!--[if IE]>#{stylesheet_link_tag 'ie6', 'ie7', :theme => theme}<![endif]-->".html_safe if request.env['HTTP_USER_AGENT'] =~ /MSIE/ -%>
   <%= "<meta name=\"keywords\" content=\"#{@meta.meta_keywords}\" />".html_safe if @meta.meta_keywords.present? %>
   <%= "<meta name=\"description\" content=\"#{@meta.meta_description}\" />".html_safe if @meta.meta_description.present? -%>
   <%= yield :head_libraries %>
